--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "marked": "^11.1.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
